--- a/Read/ReadAndroid/01.大型方案/37.自动切换网络方案实践.md
+++ b/Read/ReadAndroid/01.大型方案/37.自动切换网络方案实践.md
@@ -1,35 +1,38 @@
 #### 目录介绍
-- 01.整体概述介绍
-    - 1.1 项目背景
+- 01.整体概述说明
+    - 1.1 项目背景介绍
     - 1.2 核心思路说明
     - 1.3 设计目标
     - 1.4 收益分析
     - 1.5 项目风险点
+    - 1.6 稳定性建设
 - 02.方案设计思路
     - 2.1 需求拆解分析
     - 2.2 总体设计重点
-    - 2.3 如何设置优先级
-    - 2.4 网络判断策略
+    - 2.3 网络轮询设计
+    - 2.4 网络监听实践
     - 2.5 网络切换策略
     - 2.6 Wi-Fi切换&连接
     - 2.7 多Wi-Fi连接
-- 03.方案设计图
-    - 3.1 整体架构图
-    - 3.2 UML设计图
-    - 3.3 关键流程图
-    - 3.4 模块依赖关系
+    - 2.8 如何设置优先级
+- 03.其他的一些设计
+    - 3.1 异常点设计
+    - 3.2 兼容性设计
+    - 3.3 稳定性设计
+    - 3.4 降低策略设计
+    - 3.5 自测case设计
 - 04.原理解读研究
     - 4.1 网络管理机制
     - 4.2 Wi-Fi间切换
-    - 4.3
 - 05.遇到的问题
     - 5.1 打开Wi-Fi失败
+    - 5.2 开启Wi-Fi有延迟
 
 
 
 
-### 01.整体概述介绍
-#### 1.1 项目背景
+### 01.整体概述说明
+#### 1.1 项目背景介绍
 - 业务背景介绍
     - 1、优先级：网线>Wi-Fi>移动流量(机具可能有网卡) ；2、网线不通情况下自动切换到回无线网；3、无线网也只有3分钟不通的情况才自动切换回网线。
 - 网络类型说明
@@ -71,27 +74,48 @@
     - 增加网络监听，并自动按照优先级策略，切换网络环境。可以强化产品体验。
 
 
+
 #### 1.5 项目风险点
 - 风险点场景1
     - 比如用户刚开始使用Wi-Fi(A)好使的，这个时候用户插上了网线，按照原始逻辑，则还是使用Wi-Fi(因为以用户手动操作为主)。
     - 现在使用了网络切换逻辑，则需要切换到网线上(用户未主动做任何操作)，如果切换到网线上异常，则可能导致故障；如果切换网线正常，拔了网线，中间操作也可能出异常。
 - 风险点场景2
-    - 比如用户网线连接上了，采用Wi-Fi去连接上了网络。有可能用户会认为自己使用Wi-Fi
+    - 比如用户网线连接上了，采用Wi-Fi去连接上了网络。有可能用户会认为自己使用Wi-Fi而非是网线。
+- 风险点场景3【较大】
+    - 关于Wi-Fi的连接，由于一些Wi-Fi需要密码登陆，在操作API连接网络过程中，可能会有失败的情况，这个时候需要重试。
+    - Wi-Fi连接是一个耗时操作，也有可能导致在切换中，网络切换的过程需要一个时间。
+- 风险点场景4
+    - 关于网络回退连接，由于系统自身就有优先级策略。这个时候，改动这个也存在设备兼容性问题，或者系统版本风险，技术有一定难度。
+
+
+
+#### 1.6 稳定性建设
+- 该库开发完毕后，必须做稳定性设计
+    - 能够支持一键降级处理。大概的意思是，如果使用环节有问题影响体验，则可以通过开关(服务端返回)降级(让该功能不可用，也就是网络切换什么都不做)。
 
 
 
 ### 02.方案设计思路
 #### 2.1 需求拆解分析
-- 分析1: 如何设置wifi、以太网优先级？
-- 分析2: 用户设置优先级后，如何实现网络切换？
-- 分析3: Wi-Fi有多个，怎么去连接Wi-Fi。Wi-Fi连接失败，密码错误怎么处理？
-- 分析4: 拔下网线，如果监听以太网不可用，然后网络切换？
+- 需求拆解后的任务
+    - A.梳理需求case，即Wi-Fi，以太网，移动流量组合的case，大体总的实现方案。
+    - B.Wi-Fi工具开发，4G/5G/3G工具开发，以太网工具开发，这块可以尽可能复用之前逻辑。
+    - C.Wi-Fi，移动流量，以太网三种不同网络的监听功能开发。监听是否连接，是否可用。
+    - D.网络切换业务的逻辑实现，还有网络切换的记录(链表)，以及(以太网——>回退到Wi-FiA而不是Wi-FiB)回退逻辑的处理。
+    - E.模拟网络不通的行为操作(借助工具)，切换业务的测试
+    - F.边界逻辑和测试case的梳理
+    - G.Wi-Fi，3G/4G/5G，以太网系统优先级改造【难度大】
+- 一些问题思考和分析
+    - 分析1: 如何设置wifi、以太网、移动数据优先级？
+    - 分析2: 用户设置优先级后，如何实现网络切换？
+    - 分析3: Wi-Fi有多个，怎么去连接Wi-Fi。Wi-Fi连接失败，密码错误怎么处理？
+    - 分析4: 拔下网线，如果监听以太网不可用，然后网络切换？
 
 
 
 #### 2.2 总体设计重点
 - 业务分析思路
-    - A.优先选择网线的模式，如果网线连接并且有数据流量，则优先使用网线
+    - A.按照网络优先级策略，优先选择网线的模式，如果网线连接并且有数据流量，则优先使用网线
     - B.如果网线不通情况(网线未连接/网线网络断开等)，则自动切换到Wi-Fi无线网
     - C.切换到无线网，搜索无线网有多个，优先切换到上一次连接无线网(无线网需要密码)
     - D.如果无线网切换成功，则开启无线网模式
@@ -106,29 +130,50 @@
 
 
 
-#### 2.3 如何设置优先级
-- 如何设置网络优先级
-    - A.使用Settings.global设置用户优先级，供ConnectivityService使用
-    - B.使用ConnectivityManager.setNetworkPreference
-- 在Android9.0设置有线网络优先级直接修改EthernetNetworkFactory.java的 NETWORK_SCORE 值就行
-    - 研究了一下EthernetNetworkFactory.java和ConnectivityService.java发现里面的逻辑有很大的修改。
-- 在Android11 修改有线网络优先级。找到EthernetNetworkFactory.java的getNetworkScore()方法，这里面返回的score才是有线网的有效分值；
-    - 这个getNetworkScore()方法是在Android11 新增的。在该方法返回NETWORK_SCORE值即可。
+#### 2.3 网络轮询设计
+- 在网络切换中有3分钟监听网络情况
+    - 业务场景分析：3分钟网络监听，主要是为了监听无线网在不通的情况下，切换到网线的操作。
+- 轮询监听需要支持关闭操作
+    - 举例A场景：无线网也只有3分钟不通的情况才自动切换回网线，需要开启轮询操作
+    - 举例B场景：网线切换成功并且可用后，这个时候就需要关闭轮询操作。
+- 具体有哪些可以实现轮训执行任务的操作
+    - 第一种方案：使用Thread.sleep实现轮询。一直做while循环
+    - 第二种方案：使用ScheduledExecutorService实现轮询
+    - 第三种方案：使用Timer实现定时性周期性任务轮训
+    - 第四种方案：使用Handler不断发送消息来实现轮训
+- 从轮询执行角度分析任务执行类型
+    - 第一种属于固定速率执行，每个执行都相对于初始执行的计划执行时间进行调度。如果由于任何原因而延迟执行，则两个或更多执行将快速连续发生以“赶上”。
+    - 第二种属于固定延迟执行，每个执行都相对于前一次执行的实际执行时间进行调度。如果由于任何原因延迟执行，后续执行也将被延迟。
+- 每一种方案对应的执行类型说明
+    - 第一种，第四种：是属于固定延迟执行
+    - 第二种，第三种：是属于固定速率执行
+- 目前网络轮询采用哪一种方案
+    - 采用第四种方式，实现轮询。这个可以使用自带Looper的HandlerThread实现。
 
 
 
-#### 2.4 网络判断策略
+#### 2.4 网络监听实践
+- 网络监听接口设计
+    - 网络状态变化时监听：设计广播监听网络状态接口回调，这个要暴露给外部开发者。这个用来判断当前最新连接上了那种网络！
+- 监听支持全局，也支持在Activity页面
+    - 网络监听必须是支持全局的，这个可以设计成在Application启动时注册监听。
+
 
 
 
 #### 2.5 网络切换策略
 - 以太网判断逻辑
     - 不管是拔掉网线，或者网线松动，或者网线连接正常但是是断开场景，或者网线连接正常但数据传输失败。都可以认为以太网不可用。
-- 如何判断以太网不可用？如何监听以太网不可用？
-    - 待完善
+- 几种不通网络的切换总策略
+    - 网线>Wi-Fi>移动流量(机具可能有网卡)
+- 多种网络同时存在情景如何绑定网络
+    - 第一种方案：比如网线可用，Wi-Fi可用，这个时候优先使用网线，断开Wi-Fi连接(踢掉)
+    - 第二种方案：比如网线可用，Wi-Fi可用，这个时候改变网络优先级。这个难度系数大！
+    - 举一个实际场景，你看视频，在无线网和手机流量并存的情况下，手机会优先选择Wi-Fi，这个是因为系统评分机制。
 - 设置优先级后，连接上对应优先级网络。策略的实现思路
     - 1.利用评分机制，默认以太网具有最高优先级分数70，wifi优先级分数为60。当需要wifi优先时，将以太网优先级分数调整为30。由于wifi和以太网无法共存，只能有一个在线，须init.rc中设置路由表（ip ru add from all lookup main pref 9000）后实现共存。
     - 2.ConnectivityService.java中，解决一个网络上线后另外一个网络被踢掉问题。
+    - 注意：评分机制这块难度系数大。原因1:难以修改系统自带属性；原因2：修改系统评分机制对系统影响范围不可控；原因3:受一些机具系统版本和厂商限制；
 - 注意点说明：
     - 考虑最大程度整合原生系统的评分机制，通过Setting.Global获取到优先级参数后，只对用户设置的优先级进行特殊处理，其他情况采用系统方案。
     - 因为毕竟系统中还有wifi，以太网、Mobile等网络，破坏了原有评分系统，会导致很多side effects。
@@ -146,18 +191,57 @@
 
 
 
+#### 2.7 如何设置优先级
+- 如何设置网络优先级
+    - A.使用Settings.global设置用户优先级，供ConnectivityService使用
+    - B.使用ConnectivityManager.setNetworkPreference
+- 在Android9.0设置有线网络优先级直接修改EthernetNetworkFactory.java的 NETWORK_SCORE 值就行
+    - 研究了一下EthernetNetworkFactory.java和ConnectivityService.java发现里面的逻辑有很大的修改。
+- 在Android11 修改有线网络优先级。找到EthernetNetworkFactory.java的getNetworkScore()方法，这里面返回的score才是有线网的有效分值；
+    - 这个getNetworkScore()方法是在Android11 新增的。在该方法返回NETWORK_SCORE值即可。
 
-### 03.方案设计图
-#### 3.1 整体架构图
 
 
-#### 3.2 UML设计图
+### 03.其他的一些设计
+#### 3.1 异常点设计
+- 异常点1: Wi-Fi连接异常或失败
+    - 这里必须有重试功能，且需要暴露最大重试次数给外部开发者。
+- 异常点2: 连接新的类型网络后检测网络可用
+    - 客户端需要ping一下，判断网络是否连接外网可用。
+- 异常点3: 以太网判断是否连接异常
+    - 网上有各种检测以太网网线是否连接上的操作，无非就是读取proc本地文件中的net，这种操作不太准，且受系统权限影响。直接用工具类判断以太网是否可用即可。
+- 异常点4: 轮询操作线程低优先级被回收
+    - 如果轮询线程被回收了，导致轮询不可用。则重新开启新线程
 
 
-#### 3.3 关键流程图
+
+#### 3.2 兼容性设计
+- 主要是考虑在不通机具设备上
+    - 这个需要在更多的机具上测试。
 
 
-#### 3.4 模块依赖关系
+
+#### 3.3 稳定性设计
+- 完善日志链路
+    - 完善日志链路记录，将一些核心关键点，异常点，写日志到本地file文件中，便于排查问题。
+- 配置降低策略
+    - 这个是兜底逻辑，遇到线上问题。最高优先级是：止损。
+- 代码异常捕获
+    - 在连接网络，尤其是Wi-Fi连接中，有不少的try-catch操作。这些需要注意走到catch操作会导致业务上影响。
+
+
+
+#### 3.4 降低策略设计
+- 降级开关配置
+    - 服务端控制，最好是绑定到具体学校。配置后，可以添加到configV2接口字段中
+- 客户端降级
+    - 降级后，网络切换功能不可用。相当于客户手动连接什么网络，就选什么网络，不做任何干预。
+    - 降级后，网络切换轮询，将线程销毁。
+
+
+
+#### 3.5 自测case设计
+- 待完善
 
 
 
@@ -182,7 +266,12 @@
 
 
 #### 5.2 开启Wi-Fi有延迟
-- 开启WiFi一般需要一定的时间,因此不能立马去连接，需要等WiFi稳定可用，经测试一般2.5秒即可完成。因此建议延迟一下！
+- 开启WiFi一般需要一定的时间
+    - 因此不能立马去连接，需要等WiFi稳定可用，经测试一般2.5秒即可完成。因此建议延迟一下！
+
+
+
+
 
 
 
