--- a/Read/ReadAndroid/01.大型方案/37.自动切换网络方案实践.md
+++ b/Read/ReadAndroid/01.大型方案/37.自动切换网络方案实践.md
@@ -15,12 +15,14 @@
     - 2.6 Wi-Fi切换&连接
     - 2.7 多Wi-Fi连接
     - 2.8 如何设置优先级
+    - 2.9 Grpc设置网络
 - 03.其他的一些设计
-    - 3.1 异常点设计
+    - 3.1 网络环境测试
     - 3.2 兼容性设计
     - 3.3 稳定性设计
     - 3.4 降低策略设计
     - 3.5 自测case设计
+    - 3.6 异常点设计
 - 04.原理解读研究
     - 4.1 网络管理机制
     - 4.2 Wi-Fi间切换
@@ -203,15 +205,11 @@
 
 
 ### 03.其他的一些设计
-#### 3.1 异常点设计
-- 异常点1: Wi-Fi连接异常或失败
-    - 这里必须有重试功能，且需要暴露最大重试次数给外部开发者。
-- 异常点2: 连接新的类型网络后检测网络可用
-    - 客户端需要ping一下，判断网络是否连接外网可用。
-- 异常点3: 以太网判断是否连接异常
-    - 网上有各种检测以太网网线是否连接上的操作，无非就是读取proc本地文件中的net，这种操作不太准，且受系统权限影响。直接用工具类判断以太网是否可用即可。
-- 异常点4: 轮询操作线程低优先级被回收
-    - 如果轮询线程被回收了，导致轮询不可用。则重新开启新线程
+#### 3.1 网络环境测试
+- 切换网络后如何做网络环境测试
+    - 通过okHttp去请求https://www.qq.com/，如果请求成功了，则表示网络可以正常使用！
+- 如何做支付后台网络环境测试
+    - 通过网络请求，请求一下支付后台的某个接口，如果请求成功了，则表示支付后台是正常可用！
 
 
 
@@ -242,6 +240,17 @@
 
 #### 3.5 自测case设计
 - 待完善
+
+
+#### 3.6 异常点设计
+- 异常点1: Wi-Fi连接异常或失败
+    - 这里必须有重试功能，且需要暴露最大重试次数给外部开发者。
+- 异常点2: 连接新的类型网络后检测网络可用
+    - 客户端需要ping一下，判断网络是否连接外网可用。
+- 异常点3: 以太网判断是否连接异常
+    - 网上有各种检测以太网网线是否连接上的操作，无非就是读取proc本地文件中的net，这种操作不太准，且受系统权限影响。直接用工具类判断以太网是否可用即可。
+- 异常点4: 轮询操作线程低优先级被回收
+    - 如果轮询线程被回收了，导致轮询不可用。则重新开启新线程
 
 
 
