--- a/Read/ReadAndroid/01.大型方案/37.自动切换网络方案实践.md
+++ b/Read/ReadAndroid/01.大型方案/37.自动切换网络方案实践.md
@@ -15,7 +15,7 @@
     - 2.6 Wi-Fi切换&连接
     - 2.7 多Wi-Fi连接
     - 2.8 如何设置优先级
-    - 2.9 Grpc设置网络
+    - 2.9 绑定设置网络
 - 03.其他的一些设计
     - 3.1 网络环境测试
     - 3.2 兼容性设计
@@ -68,6 +68,8 @@
     - 做成maven功能库，暴露外部api接口
 - 可以配置策略
     - 网线-4G-Wi-Fi不通环境切换，可以配置切换环境后时间配置。还可以网络连接优先级策略
+- 待稳定后在下沉库
+    - 等待测试OK，运行一段时间OK后，在下沉为maven库
 
 
 #### 1.4 收益分析
@@ -159,7 +161,11 @@
     - 网络状态变化时监听：设计广播监听网络状态接口回调，这个要暴露给外部开发者。这个用来判断当前最新连接上了那种网络！
 - 监听支持全局，也支持在Activity页面
     - 网络监听必须是支持全局的，这个可以设计成在Application启动时注册监听。
-
+- 如何判断各种网络是否可用
+    - 以太网：
+    - 移动流量：AppNetworkUtils.isMobileAvailable()判断移动数据是否可用
+    - Wi-Fi：
+    - 整体网络：AppNetworkUtils.isConnected()判断是否连接；AppNetworkUtils.isAvailable()判断是否可用
 
 
 
@@ -202,6 +208,21 @@
 - 在Android11 修改有线网络优先级。找到EthernetNetworkFactory.java的getNetworkScore()方法，这里面返回的score才是有线网的有效分值；
     - 这个getNetworkScore()方法是在Android11 新增的。在该方法返回NETWORK_SCORE值即可。
 
+
+
+#### 2.9 绑定设置网络
+- 多网络可用情况下，如何使用指定的网络进行请求？
+    - 在同一时间下，Android系统只能允许一种网络类型连接。比如设备有Wi-Fi和移动网络，根据评分机制，会优先使用Wi-Fi，这个时候会优先走Wi-Fi流量。
+    - 但是想用手机网络发送某个请求，你只能关闭wifi，打开移动网络，才能完成这样子的一个需求。这个操作比较麻烦！
+- 代码如何设置绑定指定网络请求
+    - 第一步：创建NetworkRequest对象，通过addTransportType这个api设置网络传输类型
+    - 第二步：设置监听器，主要是监听是否找到了合适的网络传输类型
+    - 第三步：调用requestNetwork开始请求系统指定网络操作
+    - 第四步：在第二步的回调中，开始绑定网络操作
+- 如何测试绑定指定网络请求是否成功
+    - 现在有Wi-Fi，移动流量，网线都是连接可用状态，代码设置优先使用移动流量。那么该怎么测试网络请求，是消耗了移动流量而不是其他的？
+- 遇到问题
+    - 无法绑定成功
 
 
 ### 03.其他的一些设计
@@ -303,3 +324,5 @@ Framework中的连接管理机制： https://blog.csdn.net/u010961631/article/de
 网络连接评分机制之NetworkAgent： https://blog.csdn.net/u010961631/article/details/48971651
 Android网络优先级及更改： https://blog.csdn.net/u013686019/article/details/51447129/
 网上的代码都比较旧了，只能做思路参考，里面有些方法不一样了。
+- Android | 判断连接的网络是否可用以及是否连接网络
+  - https://blog.csdn.net/pzkj0079/article/details/127360842
