--- a/Read/ReadAndroid/01.大型方案/37.自动切换网络方案实践.md
+++ b/Read/ReadAndroid/01.大型方案/37.自动切换网络方案实践.md
@@ -211,6 +211,8 @@
 
 
 #### 2.9 绑定设置网络
+- 多种网络下，App使用那种网络
+    - 当APK未指定使用网络类型时，APK会按照系统配置的默认网络优先顺序选择使用的网络，默认使用系统当前的网络。这个是根据网络类型评分机制来判断优先级的！
 - 多网络可用情况下，如何使用指定的网络进行请求？
     - 在同一时间下，Android系统只能允许一种网络类型连接。比如设备有Wi-Fi和移动网络，根据评分机制，会优先使用Wi-Fi，这个时候会优先走Wi-Fi流量。
     - 但是想用手机网络发送某个请求，你只能关闭wifi，打开移动网络，才能完成这样子的一个需求。这个操作比较麻烦！
@@ -218,7 +220,7 @@
     - 第一步：创建NetworkRequest对象，通过addTransportType这个api设置网络传输类型
     - 第二步：设置监听器，主要是监听是否找到了合适的网络传输类型
     - 第三步：调用requestNetwork开始请求系统指定网络操作
-    - 第四步：在第二步的回调中，开始绑定网络操作
+    - 第四步：在第二步的回调中，开始绑定网络操作。在23以下使用setProcessDefaultNetwork，否则使用bindProcessToNetwork绑定网络
 - 如何测试绑定指定网络请求是否成功
     - 现在有Wi-Fi，移动流量，网线都是连接可用状态，代码设置优先使用移动流量。那么该怎么测试网络请求，是消耗了移动流量而不是其他的？
 - 遇到问题
