--- a/Read/ReadAndroid/00.方案实践/01.崩溃捕获设计实践.md
+++ b/Read/ReadAndroid/00.方案实践/01.崩溃捕获设计实践.md
@@ -28,26 +28,12 @@
     - 4.6 日志可视化查看
     - 4.7 日志发送邮箱
     - 4.8 崩溃重启实践
-- 05.方案基础设计
-    - 5.1 整体架构图
-    - 5.2 UML设计图
-    - 5.3 关键流程图
-    - 5.4 接口设计图
-    - 5.5 模块间依赖关系
-- 06.其他设计说明
-    - 6.1 性能设计
-    - 6.2 稳定性设计
-    - 6.3 灰度设计
-    - 6.4 降级设计
-    - 6.5 异常设计
-- 07.其他说明介绍
-    - 7.1 参考链接
 
 
 ### 01.整体介绍概述
 #### 1.1 项目背景介绍
 - `Android`的稳定性是`Android`性能的一个重要指标，它也是App质量构建体系中最基本和最关键的一环。
-- 如果应用经常崩溃率，或者关键功能不可用，那显然会对我们的留存产生重大影响。
+    - 如果应用经常崩溃率，或者关键功能不可用，那显然会对我们的留存产生重大影响。
 
 
 #### 1.2 遇到问题
@@ -71,6 +57,7 @@
     - 机型、系统、ROM、厂商、ABI，这些采集到的系统信息都可以作为维度聚合，共性问题例如是不是因为安装了 Xposed，是不是只出现在 x86 的手机，是不是只有三星这款机型，是不是只在 Android 8.0 的系统上。
 - 复现问题
     - 尽量去找到复现问题的链路，方便排查问题。有些bug如果找不到，那么思考能否上传info日志，通过技术埋点去排查崩溃链路问题。
+
 
 
 #### 1.4 设计目标
@@ -128,7 +115,7 @@
     ```
 - 得出结论如下所示
     - 其实在`fork`出`app`进程的时候，系统已经为`app`设置了一个异常处理，并且最终崩溃后会直接导致执行该`handler`的`finally`方法最后杀死app直接退出app。
-- 如何自己捕获异常
+- 如何自己捕获App异常
     - 如果你要自己处理，你可以自己实现`Thread.UncaughtExceptionHandler`。而调用`setDefaultUncaughtExceptionHandler`多次，最后一次会覆盖之前的。
 
 
@@ -544,6 +531,15 @@
 
 
 #### 4.6 日志可视化查看
+- 可以通过该工具查看缓存文件
+    - 快速查看`data/data/包名`目录下的缓存文件。
+    - 快速查看`/sdcard/Android/data/包名`下存储文件。
+- 一键接入该工具
+    - FileExplorerActivity.startActivity(MainActivity.this);
+    - 开源项目地址：https://github.com/yangchong211/YCAndroidTool
+- 可视化界面展示
+    - ![在这里插入图片描述](https://img-blog.csdnimg.cn/cccea61a47ed43ef88ec3f335f84ab0b.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5p2o5YWF,size_14,color_FFFFFF,t_70,g_se,x_16)![在这里插入图片描述](https://img-blog.csdnimg.cn/81e1797d2220499cae25b90c932d1092.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5p2o5YWF,size_15,color_FFFFFF,t_70,g_se,x_16)
+    - ![在这里插入图片描述](https://img-blog.csdnimg.cn/2752b6b0e866402f8e76c8c544028de0.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5p2o5YWF,size_15,color_FFFFFF,t_70,g_se,x_16)![在这里插入图片描述](https://img-blog.csdnimg.cn/221754c0dd7b4c028d5f0a122bdecd18.png?x-oss-process=image/watermark,type_d3F5LXplbmhlaQ,shadow_50,text_Q1NETiBA5p2o5YWF,size_15,color_FFFFFF,t_70,g_se,x_16)
 
 
 
@@ -565,42 +561,6 @@
     CrashToolUtils.reStartApp3(AppManager.getAppManager().currentActivity());
     ```
 
-
-
-### 05.方案基础设计
-#### 5.1 整体架构图
-
-
-
-#### 5.2 UML设计图
-
-
-
-#### 5.3 关键流程图
-
-
-#### 5.4 接口设计图
-
-
-#### 5.5 模块间依赖关系
-
-
-
-### 06.其他设计说明
-#### 6.1 性能设计
-
-
-
-#### 6.2 稳定性设计
-
-
-#### 6.3 灰度设计
-
-
-#### 6.4 降级设计
-
-
-#### 6.5 异常设计
 
 
 
