--- a/Read/ReadAndroid/00.方案实践/01.崩溃捕获设计实践.md
+++ b/Read/ReadAndroid/00.方案实践/01.崩溃捕获设计实践.md
@@ -68,7 +68,7 @@
 - 能够可视化展示崩溃日志信息
     - 这一块，主要是能够读到崩溃日志路径，拿到所有的文件。然后通过可视化界面展示出来，方便查看！
 - 能够将崩溃信息文件转发分享
-    - 能够将崩溃file文件分享到微信，QQ或者钉钉这类社交App，方便测试童鞋转发给开发。
+    - 能够将崩溃file文件分享到微信，QQ或者钉钉这类社交App，方便测试童鞋转发给开发。[MonitorFileLib](https://github.com/yangchong211/YCAndroidTool/tree/master/MonitorFileLib)
 
 
 
@@ -91,7 +91,7 @@
     }
     ```
 - 然后再来看一下`commonInit()`方法，看看里面做了什么操作？
-    - 可以发现这里调用了`setDefaultUncaughtExceptionHandler`方法，设置了自定义的Handler类
+    - 可以发现这里调用了`setDefaultUncaughtExceptionHandler`方法，设置了自定义的`Handler`类
     ``` java
     protected static final void commonInit() {
         Thread.setDefaultUncaughtExceptionHandler(new KillApplicationHandler(loggingHandler));
@@ -121,7 +121,8 @@
 
 
 ##### 2.2.2 崩溃日志的记录
-- 在`KillApplicationHandler`类中的`uncaughtException`方法，可以看到`ActivityManager.getService().handleApplicationCrash`被调用，那么这个是用来做什么的呢？
+- 在`KillApplicationHandler`类中的`uncaughtException`方法
+    - 可以看到`ActivityManager.getService().handleApplicationCrash`被调用，那么这个是用来做什么的呢？
     - ActivityManager.getService().handleApplicationCrash-->ActivityManagerService.handleApplicationCrash-->handleApplicationCrashInner方法
 - 从下面可以看出,若传入`app`为`null`时,`processName`就设置为`system_server`
     ``` java
@@ -292,7 +293,8 @@
 
 #### 3.2 异常处理常用api
 ##### 3.2.1 设置uncaughtExceptionPreHandler
-- `Thread`中存在两个`UncaughtExceptionHandler`。一个是静态的`defaultUncaughtExceptionHandler`，另一个是非静态`uncaughtExceptionHandler`。
+- `Thread`中存在两个`UncaughtExceptionHandler`。
+    - 一个是静态的`defaultUncaughtExceptionHandler`，另一个是非静态`uncaughtExceptionHandler`。
     ``` java
     private volatile UncaughtExceptionHandler uncaughtExceptionHandler;
     private static volatile UncaughtExceptionHandler defaultUncaughtExceptionHandler;
@@ -320,7 +322,9 @@
 
 
 ##### 3.2.2 没有设置uncaughtExceptionPreHandler
-- 没有设置`uncaughtExceptionHandler`怎么办？如果没有设置`uncaughtExceptionHandler`，将使用线程所在的线程组来处理这个未捕获异常。线程组`ThreadGroup`实现了`UncaughtExceptionHandler`，所以可以用来处理未捕获异常。ThreadGroup类定义：
+- 没有设置`uncaughtExceptionHandler`怎么办？
+    - 如果没有设置`uncaughtExceptionHandler`，将使用线程所在的线程组来处理这个未捕获异常。
+    - 线程组`ThreadGroup`实现了`UncaughtExceptionHandler`，所以可以用来处理未捕获异常。ThreadGroup类定义：
     ``` java
     private ThreadGroup group;
     //可以发现ThreadGroup类是集成Thread.UncaughtExceptionHandler接口的
@@ -348,16 +352,18 @@
 #### 3.3 注意事项说明
 - 难道要为每一个线程创建`UncaughtExceptionHandler`吗？
     - 应用程序通常都会创建很多线程，如果为每一个线程都设置一次 `UncaughtExceptionHandler` 未免太过麻烦。
-    - 既然出现未处理异常后 JVM 最终都会调 getDefaultUncaughtExceptionHandler()，那么我们可以在应用启动时设置一个默认的未捕获异常处理器。即调用Thread.setDefaultUncaughtExceptionHandler(handler)
+    - 既然出现未处理异常后 JVM 最终都会调 getDefaultUncaughtExceptionHandler()，那么我们可以在应用启动时设置一个默认的未捕获异常处理器。
+    - 即调用`Thread.setDefaultUncaughtExceptionHandler(handler)`就可以。
 - `setDefaultUncaughtExceptionHandler`被调用多次如何理解？
     - `Thread.setDefaultUncaughtExceptionHandler(handler)`方法如果被多次调用的话，会以最后一次传递的 handler 为准。
-    - 所以如果用了第三方的统计模块，可能会出现失灵的情况。对于这种情况，在设置默认 `handler` 之前，可以先通过 `getDefaultUncaughtExceptionHandler()` 方法获取并保留旧的`handler`，然后在默认`handler`的`uncaughtException`方法中调用其他`handler`的`uncaughtException`方法，保证都会收到异常信息。
+    - 所以如果用了第三方的统计模块，可能会出现失灵的情况。
+    - 对于这种情况，在设置默认 `handler` 之前，可以先通过 `getDefaultUncaughtExceptionHandler()` 方法获取并保留旧的`handler`，然后在默认`handler`的`uncaughtException`方法中调用其他`handler`的`uncaughtException`方法，保证都会收到异常信息。
 
 
 
 #### 3.4 JVM处理异常入口
 - 思考一下：JVM拿到异常之后是如何将捕获的异常回调到`java`层的`uncaughtException`方法。
-- 在 Hotspot 虚拟机源码的 thread.cpp 中的 [JavaThread::exit](http://hg.openjdk.java.net/jdk8u/jdk8u/hotspot/file/c55d012dd067/src/share/vm/runtime/thread.cpp#l1799) 方法发现了这样的一段代码，并且还给出了注释：
+    - 在 `Hotspot` 虚拟机源码的 `thread.cpp` 中的 [JavaThread::exit](http://hg.openjdk.java.net/jdk8u/jdk8u/hotspot/file/c55d012dd067/src/share/vm/runtime/thread.cpp#l1799) 方法发现了这样的一段代码，并且还给出了注释：
     ``` c++
     if (HAS_PENDING_EXCEPTION) {
       ResourceMark rm(this);
@@ -370,7 +376,7 @@
     }
     ```
 - 在线程调用 exit 退出时
-    - 如果有未捕获的异常，则会调用 Thread.dispatchUncaughtException 方法。这个则是java层处理异常的入口！
+    - 如果有未捕获的异常，则会调用 `Thread.dispatchUncaughtException` 方法。这个则是java层处理异常的入口！
 
 
 
@@ -399,7 +405,7 @@
     - 观察可知，这个崩溃信息则是记录着app从启动到崩溃中的流程日志。
 - `StackTraceElement`此类在 `java.lang` 包下
     - public final class StackTraceElement extends Object implements Serializable
-    - 堆栈跟踪元素，它由 Throwable.getStackTrace() 返回。每个元素表示单独的一个【堆栈帧】。
+    - 堆栈跟踪元素，它由 `Throwable.getStackTrace()` 返回。每个元素表示单独的一个【堆栈帧】。
     - 所有的堆栈帧（堆栈顶部的那个堆栈帧除外）都表示一个【方法调用】。堆栈顶部的帧表示【生成堆栈跟踪的执行点】。通常，这是创建对应于堆栈跟踪的 throwable 的点。
 
 
@@ -465,7 +471,8 @@
 
 #### 4.3 实现相同异常次数统计
 - 大概的思路如下所示
-    - 每一次发生崩溃时，拿到异常Throwable，然后获取它的堆栈信息，转化为字符串后再md5一下得到一个key。每一次存储的时候，获取之前的【如果之前没有则是0】次数加一
+    - 每一次发生崩溃时，拿到异常Throwable，然后获取它的堆栈信息，转化为字符串后再md5一下得到一个key。
+    - 每一次存储的时候，获取之前的【如果之前没有则是0】次数加一
 - 注意问题点：关键是怎么判断两个崩溃是同一个？
     - 举一个例子：Integer.parseInt("12.3") 和 Integer.parseInt("12.4") 它们都是 NumberFormatException 异常，但却是不同的。获取堆栈再md5一下即可保证key唯一
 
@@ -544,6 +551,13 @@
 
 
 #### 4.7 日志发送邮箱
+- 发送邮件分为两种:
+    - 调用系统的发邮件功能发送邮件
+    - 使用特定的邮箱密码发送邮件
+- 发送优先必备操作
+    - 要使用JavaMail的三个jar包:activation.jar；additionnal.jar；mail.jar
+- 发送流程如下所示
+    - 设置发送服务器；设置发送账户和密码；设置发送显示的名称,主题,内容和附件；设置接收者地址；发送邮件给接收者
 
 
 
