--- a/Read/ReadShareWiki/05.综合专项/04.排查问题模板.md
+++ b/Read/ReadShareWiki/05.综合专项/04.排查问题模板.md
@@ -31,12 +31,13 @@
 
 
 #### 1.2 问题描述
-问题的背景：简单描述一下发生问题的背景
-问题是否必现：1(必现)；2(非必须)
-问题所在版本：App版本是多少
-问题复现步骤：简单描述一下出现该问题的步骤
-问题场景说明：1(刷卡)；2(扫码)；或者其他
-问题出现的时间点：描述一下出现问题的时间点
+- 问题描述模版如下
+    - 问题的背景：简单描述一下发生问题的背景
+    - 问题是否必现：1(必现)；2(非必须)
+    - 问题所在版本：App版本是多少
+    - 问题复现步骤：简单描述一下出现该问题的步骤
+    - 问题场景说明：1(刷卡)；2(扫码)；或者其他
+    - 问题出现的时间点：描述一下出现问题的时间点
 
 
 
