--- a/Read/ReadAndroid/01.大型方案/37.自动切换网络方案实践.md
+++ b/Read/ReadAndroid/01.大型方案/37.自动切换网络方案实践.md
@@ -16,6 +16,7 @@
     - 2.7 多Wi-Fi连接
     - 2.8 如何设置优先级
     - 2.9 绑定设置网络
+    - 2.10 校验网络连接
 - 03.其他的一些设计
     - 3.1 网络环境测试
     - 3.2 兼容性设计
@@ -196,6 +197,10 @@
     - 第一步：打开、关闭WIFI。WiFi的打开和关闭用的 WifiManager 类中的setWifiEnabled方法实现。
     - 第二步：WiFi连接。输入WiFi名称、密码实现连接。
     - 第三步：断开WIFI连接。断开WiFi连接有两种方法：暂时断开，可以重连；断开，不可以重连，忘记密码。
+- Wi-Fi连接遇到一个最大问题
+    - Wi-Fi通过ssid和pwd连接，总是容易频繁失败。或者第一次成功后，后面几次就很难成功了
+- 网络切换难题难点
+    - 从Wi-Fi切到以太网，断开Wi-Fi，这个时候系统走以太网。当以太网不可用，切到Wi-Fi(先搜索Wi-Fi，然后判断是否有之前连接的Wi-Fi，如果有则使用原密码和ssid连接，否则异常处理)
 
 
 
@@ -225,6 +230,10 @@
     - 现在有Wi-Fi，移动流量，网线都是连接可用状态，代码设置优先使用移动流量。那么该怎么测试网络请求，是消耗了移动流量而不是其他的？
 - 遇到问题
     - 无法绑定成功
+
+#### 2.10 校验网络连接
+
+
 
 
 ### 03.其他的一些设计
