--- a/Read/ReadAndroid/01.大型方案/37.自动切换网络方案实践.md
+++ b/Read/ReadAndroid/01.大型方案/37.自动切换网络方案实践.md
@@ -178,6 +178,7 @@
 - 多种网络同时存在情景如何绑定网络
     - 第一种方案：比如网线可用，Wi-Fi可用，这个时候优先使用网线，断开Wi-Fi连接(踢掉)
     - 第二种方案：比如网线可用，Wi-Fi可用，这个时候改变网络优先级。这个难度系数大！
+    - 第三种方案：使用设置绑定指定网络请求，配合使用requestNetwork和setProcessDefaultNetwork设置默认网络
     - 举一个实际场景，你看视频，在无线网和手机流量并存的情况下，手机会优先选择Wi-Fi，这个是因为系统评分机制。
 - 设置优先级后，连接上对应优先级网络。策略的实现思路
     - 1.利用评分机制，默认以太网具有最高优先级分数70，wifi优先级分数为60。当需要wifi优先时，将以太网优先级分数调整为30。由于wifi和以太网无法共存，只能有一个在线，须init.rc中设置路由表（ip ru add from all lookup main pref 9000）后实现共存。
