--- a/Read/ReadAndroid/00.方案实践/01.崩溃捕获设计实践.md
+++ b/Read/ReadAndroid/00.方案实践/01.崩溃捕获设计实践.md
@@ -1,3 +1,4 @@
+# 01.崩溃捕获设计实践方案
 #### 目录介绍
 - 01.整体介绍概述
     - 1.1 项目背景介绍
@@ -39,7 +40,9 @@
 #### 1.2 遇到问题
 - `Crash`率多少算优秀呢？
     - 在明确了目标之后，我们才能正确认识我们的工作到底有什么作用。降低崩溃率到我们的指标……
-
+- 崩溃率如何衡量
+    - 崩溃率 UV = 发生崩溃的UV / 启动UV
+    - 衡量标准：崩溃率小于3/1000为正常，3/10000为优秀
 
 
 #### 1.3 基础概念介绍
@@ -457,6 +460,9 @@
         }
     }
     ```
+- 崩溃监听核心流程图
+    - ![image](https://img-blog.csdnimg.cn/2020090417061146.jpg)
+
 
 
 #### 4.2 处理捕获异常
@@ -535,6 +541,11 @@
         1844 ReferenceQueueD
         1869 FinalizerDaemon
         ```
+- 截图如下所示
+    - ![image](https://img-blog.csdnimg.cn/20200902194445625.jpg?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L20wXzM3NzAwMjc1,size_16,color_FFFFFF,t_70#pic_center)![image](https://img-blog.csdnimg.cn/20200902194445623.jpg?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L20wXzM3NzAwMjc1,size_16,color_FFFFFF,t_70#pic_center)
+    - ![image](https://img-blog.csdnimg.cn/20200902194445622.jpg?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L20wXzM3NzAwMjc1,size_16,color_FFFFFF,t_70#pic_center)![image](https://img-blog.csdnimg.cn/20200902194445576.jpg?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L20wXzM3NzAwMjc1,size_16,color_FFFFFF,t_70#pic_center)
+
+
 
 
 #### 4.6 日志可视化查看
@@ -574,8 +585,13 @@
     ``` java
     CrashToolUtils.reStartApp3(AppManager.getAppManager().currentActivity());
     ```
+- 关于崩溃重启App，具体的Demo可以看：
+    - https://github.com/yangchong211/YCAppTool/tree/master/CommonLib/AppRestartLIb
 
 
+
+### 其他内容说明
+- 关于附带的demo：https://github.com/yangchong211/YCAndroidTool
 
 
 
@@ -593,6 +609,7 @@
 - 其他一些博客
     - https://segmentfault.com/a/1190000020986852?utm_source=sf-related
     - https://juejin.cn/post/6854573218171191309
+
 
 
 
