--- a/Read/ReadBlogWiki/06.职场总结/06.职场积累的感悟.md
+++ b/Read/ReadBlogWiki/06.职场总结/06.职场积累的感悟.md
@@ -2,6 +2,8 @@
 - 01.交代工作划重点
 - 02.一定要及时反馈
 - 04.一定要对人宽容
+- 05.用创业心态工作
+- 06.快速适应新工作
 
 
 ### 01.交代工作划重点
@@ -35,12 +37,23 @@
 
 
 
+### 05.用创业心态工作
+- 以开发场景为例：
+    - A同学完成模块开发后，转测试后就不再过问，等着测试给他提bug。
+    - B同学完成模块开发后，转测试后会跟测试讨论各项边界，努力思考程序设计的缺陷。
+    - C同学完成模块开发后，主动会跟测试进行用例评审，定期跟踪测试同学测试过程中，业务流转是否正常，数据库状态更新是否符合预期。
+- 量变逐步到质变
+    - 做完——>做好——>超前做好
 
 
-
-
-
-
+### 06.快速适应新工作
+- 困惑1：
+    - 刚入职的时候，脑子里面有很多的问号：不清楚公司和各部门的分工，不认识相关业务的对接同事、不清晰公司的各项业务流程，不清楚业务产品…
+- 方法论：多问、多想、多聊
+    - 多问：向导师主动多请教，邀请熟悉的同事培训讲解。
+    - 多想：思考业务发展模式，项目设计理由和为什么？梳理出项目从需求到上线，需要那些部门同事配合，做好预期。
+    - 多聊：主动跟相关同事沟通，了解对方工作。提出自己的想法思路，请对方指正和配合。
+- https://csig.lexiangla.com/teams/k100279/docs/4787a56471e511ec83508a3f7f42b85a?company_from=csig
 
 
 
