--- a/Read/ReadShareWiki/06.搞钱搞钱/02.一件代发注意项.md
+++ b/Read/ReadShareWiki/06.搞钱搞钱/02.一件代发注意项.md
@@ -1,10 +1,12 @@
 # 02.一件代发注意项
 #### 目录介绍
+- 00.
 - 01.什么叫一件代发
 - 02.一件代发的特点
 - 03.注意事项的说明
 - 04.参考因素有哪些
 - 05.一件代发的平台
+- 07.智慧云仓如何搞
 
 
 
@@ -47,8 +49,9 @@
 
 
 
-
-
+### 07.智慧云仓如何搞
+- 云仓就是电商卖家把仓储+配送方面的问题，交由仓储公司来运作，而电商卖家自己只需要专注于自己店铺的销售和运营，从而扩大店铺的销售业绩。
+- 简单说：云仓就是一个大数据共享平台。它实现了数据共享，集成流程、简化技术方面的支持、降低了成本。平台将整合供应链中的上游、中游和下游为一个整体。
 
 
 
