--- a/Read/ReadAndroid/00.方案实践/01.崩溃捕获设计实践.md
+++ b/Read/ReadAndroid/00.方案实践/01.崩溃捕获设计实践.md
@@ -29,6 +29,14 @@
     - 4.6 日志可视化查看
     - 4.7 日志发送邮箱
     - 4.8 崩溃重启实践
+- 05.Native异常捕获
+    - 5.1 native崩溃日志组成
+    - 5.2 捕获native异常
+    - 5.3 获取native异常信息
+    - 5.4 获取native调用栈
+    - 5.5 写native异常到文件
+    - 5.6 异常抛到Java层
+
 
 
 ### 01.整体介绍概述
@@ -589,6 +597,51 @@
     - https://github.com/yangchong211/YCAppTool/tree/master/CommonLib/AppRestartLIb
 
 
+### 05.Native异常捕获
+#### 5.1 Native崩溃日志组成
+- 设备指纹
+    - 用于记录设备相关信息
+- Revision
+    - Revision 指的是硬件，而不是软件。通常情况下不使用 revision，但使用 revision 有助于您自动忽略由不良硬件导致的已知错误
+- ABI
+    - ABI 是 arm、arm64、mips、mips64、x86 或 x86-64 之一，记录该值主要用于后续对信息分析时区分使用什么工具链
+- 进程相关信息
+    - 包括进程号、进程名称
+- 错误信号
+    - 接收的信号 (这里是SIGABRT) 以及有关如何接收该信号的更多信息 (这里是SI_TKILL)
+- 中断消息
+    - 并非所有崩溃问题都会有中止消息行，但发生中止时，会出现该消息行。这是从此 pid/tid 的最后一行严重 logcat 输出中自动收集而来的，而在有意中止的情况下，这可以解释该程序自行终止的原因
+- 寄存器信息
+    - 展示所有寄存器中的内容，这些内容的有用程度取决于确切的崩溃问题
+- 调用栈
+    - crash函数调用栈
+
+
+#### 5.2 捕获native异常
+- 在Linux系统中，当发生异常时，内核会以信号机制通知进程，收到信号后，进程可以有以下三种处理方案：
+    - 忽略信号
+    - 使用系统默认操作
+    - 指定处理函数处理
+- 那么以什么方处理native异常
+    - 需要自己指定信号处理函数捕捉信号
+
+
+
+
+#### 5.3 获取native异常信息
+- https://juejin.cn/post/6854573218171191309#heading-5
+
+
+
+#### 5.4 获取native调用栈
+
+
+#### 5.5 写native异常到文件
+
+
+#### 5.6 异常抛到Java层
+
+
 
 ### 其他内容说明
 - 关于附带的demo：https://github.com/yangchong211/YCAndroidTool
@@ -600,15 +653,8 @@
     - https://www.jianshu.com/p/77a53d7b642e
 - 鹰眼Android平台崩溃监控实践
     - https://mp.weixin.qq.com/s/YSrXx_oTJkp0kRDF6XvzdQ
-- Android程序Crash时的异常上报
-    - https://blog.csdn.net/singwhatiwanna/article/details/17289479
-- Java全局异常处理
-    - https://www.lagou.com/lgeduarticle/107790.html
-- 手把手讲解 Android Hook入门Demo
-    - https://www.jianshu.com/p/74c12164ffca?tdsourcetag=s_pcqq_aiomsg
-- 其他一些博客
-    - https://segmentfault.com/a/1190000020986852?utm_source=sf-related
-    - https://juejin.cn/post/6854573218171191309
+
+
 
 
 
