--- a/Read/ReadAndroid/00.方案实践/29.常见代码优化实践.md
+++ b/Read/ReadAndroid/00.方案实践/29.常见代码优化实践.md
@@ -9,6 +9,8 @@
 - 05.编码规范优化
 - 06.懒加载优化
 - 07.其他场景优化
+- 08.反射优化
+
 
 
 
@@ -516,46 +518,21 @@
 
 ### 15.四种引用优化
 - 软引用使用场景
-    - **正常是用来处理大图片这种占用内存大的情况**
-        - 代码如下所示
-        ```
-        Bitmap bitmap = bitmaps.get(position);
-        //正常是用来处理图片这种占用内存大的情况
-        bitmapSoftReference = new SoftReference<>(bitmap);
-        if(bitmapSoftReference.get() != null) {
-            viewHolder.imageView.setImageBitmap(bitmapSoftReference.get());
-        }
-        //其实看glide底层源码可知，也做了相关软引用的操作
-        ```
-    - **这样使用软引用好处**
-        - 通过软引用的get()方法，取得bitmap对象实例的强引用，发现对象被未回收。在GC在内存充足的情况下，不会回收软引用对象。此时view的背景显示
-        - 实际情况中,我们会获取很多图片.然后可能给很多个view展示, 这种情况下很容易内存吃紧导致oom,内存吃紧，系统开始会GC。这次GC后，bitmapSoftReference.get()不再返回bitmap对象，而是返回null，这时屏幕上背景图不显示，说明在系统内存紧张的情况下，软引用被回收。
-        - 使用软引用以后，在OutOfMemory异常发生之前，这些缓存的图片资源的内存空间可以被释放掉的，从而避免内存达到上限，避免Crash发生。
+    - **正常是用来处理大图片这种占用内存大的情况**。其实看glide底层源码可知，也做了相关软引用的操作。**这样使用软引用好处**
+    - 通过软引用的get()方法，取得bitmap对象实例的强引用，发现对象被未回收。在GC在内存充足的情况下，不会回收软引用对象。此时view的背景显示
+    - 实际情况中,我们会获取很多图片.然后可能给很多个view展示, 这种情况下很容易内存吃紧导致oom,内存吃紧，系统开始会GC。这次GC后，bitmapSoftReference.get()不再返回bitmap对象，而是返回null，这时屏幕上背景图不显示，说明在系统内存紧张的情况下，软引用被回收。
+    - 使用软引用以后，在OutOfMemory异常发生之前，这些缓存的图片资源的内存空间可以被释放掉的，从而避免内存达到上限，避免Crash发生。
 - 弱引用使用场景
     - 弱引用–>随时可能会被垃圾回收器回收，不一定要等到虚拟机内存不足时才强制回收。
-    - 对于使用频次少的对象，希望尽快回收，使用弱引用可以保证内存被虚拟机回收。比如handler，如果希望使用完后尽快回收，看下面代码
-    ```
-    private MyHandler handler = new MyHandler(this);
-    private static class MyHandler extends Handler{
-        WeakReference<FirstActivity> weakReference;
-        MyHandler(FirstActivity activity) {
-            weakReference = new WeakReference<>(activity);
-        }
-
-        @Override
-        public void handleMessage(Message msg) {
-            super.handleMessage(msg);
-            switch (msg.what){
-            }
-        }
-    }
-    ```
+    - 对于使用频次少的对象，希望尽快回收，使用弱引用可以保证内存被虚拟机回收。比如handler，如果希望使用完后尽快回收，可以使用WeakReference
 - 到底什么时候使用软引用，什么时候使用弱引用呢？
     - 个人认为，如果只是想避免OutOfMemory异常的发生，则可以使用软引用。如果对于应用的性能更在意，想尽快回收一些占用内存比较大的对象，则可以使用弱引用。
     - 还有就是可以根据对象是否经常使用来判断。如果该对象可能会经常使用的，就尽量用软引用。如果该对象不被使用的可能性更大些，就可以用弱引用。
 
 
 
+### 08.反射优化
+- https://segmentfault.com/a/1190000020986852?utm_source=sf-related
 
 
 
