--- a/Read/ReadAndroid/01.大型方案/20.通用日志上传实践.md
+++ b/Read/ReadAndroid/01.大型方案/20.通用日志上传实践.md
@@ -39,7 +39,8 @@
 
 
 ### 00.问题总结思考
-- 日志上传：日志上传的业务逻辑是什么样的？有什么收益？日志上传总体设计方案是什么样的？
+- 日志上传：
+    - 日志上传的业务逻辑是什么样的？有什么收益？日志上传总体设计方案是什么样的？
 
 
 ### 01.整体概述
