--- a/Read/ReadAndroid/01.大型方案/47.Hook疑难问题实践.md
+++ b/Read/ReadAndroid/01.大型方案/47.Hook疑难问题实践.md
@@ -27,7 +27,8 @@
 
 ### 04.编译器Hook技术
 
-
+- 手把手讲解 Android Hook入门Demo
+    - https://www.jianshu.com/p/74c12164ffca?tdsourcetag=s_pcqq_aiomsg
 - ASM hook隐私方法调用，防止App被下架
     - https://juejin.cn/post/7043399520486424612
 - hook库
