--- a/Read/ReadAndroid/00.方案实践/01.崩溃捕获设计实践.md
+++ b/Read/ReadAndroid/00.方案实践/01.崩溃捕获设计实践.md
@@ -32,8 +32,8 @@
 - 05.Native异常捕获
     - 5.1 native崩溃日志组成
     - 5.2 捕获native异常
-    - 5.3 获取native异常信息
-    - 5.4 获取native调用栈
+    - 5.3 注册信号处理函数
+    - 5.4 获取native异常信息
     - 5.5 写native异常到文件
     - 5.6 异常抛到Java层
 
@@ -618,22 +618,33 @@
 
 
 #### 5.2 捕获native异常
+- Linux信号机制如何处理崩溃
+    - 所有的崩溃都是编程错误或者硬件错误相关的，系统遇到不可恢复的错误时会触发崩溃机制让程序退出，如除零、段地址错误等。
+    - 异常发生时，CPU通过异常中断的方式，触发异常处理流程，不同的处理器有不同的异常中断类型和中断处理方式。
+    - Linux把这些中断处理统一为信号量，可以注册信号量向量进行处理。
+    - 既然 Android 系统也是基于 Linux 的，那么我们可以利用 Linux 的信号机制进行异常捕获。
 - 在Linux系统中，当发生异常时，内核会以信号机制通知进程，收到信号后，进程可以有以下三种处理方案：
-    - 忽略信号
-    - 使用系统默认操作
-    - 指定处理函数处理
+    - 忽略信号。对该信号不做任何处理，就像未发生过一样；
+    - 使用系统默认操作。这种缺省操作对大部分的信号是使进程终止；
+    - 指定处理函数处理。类似中断的处理程序，对于需要处理的信号，进程可以指定处理函数；
 - 那么以什么方处理native异常
     - 需要自己指定信号处理函数捕捉信号
 
 
 
 
-#### 5.3 获取native异常信息
-- https://juejin.cn/post/6854573218171191309#heading-5
+#### 5.3 注册信号处理函数
+- 如何使用指定的信号处理函数
+    - 进程通过 sigaction() 函数来指定对某个信号的处理行为。
+    ```
+    #include <signal.h>
+    int sigaction(int sig, const struct sigaction* new_action, struct sigaction* old_action);
+    ```
 
 
 
-#### 5.4 获取native调用栈
+#### 5.4 获取native异常信息
+
 
 
 #### 5.5 写native异常到文件
@@ -651,6 +662,7 @@
 #### 参考博客
 - native crash收集流程分析
     - https://www.jianshu.com/p/77a53d7b642e
+    - https://juejin.cn/post/6854573218171191309#heading-5
 - 鹰眼Android平台崩溃监控实践
     - https://mp.weixin.qq.com/s/YSrXx_oTJkp0kRDF6XvzdQ
 
