--- a/Read/ReadShareWiki/02.生活博客/08.生活心得大集合.md
+++ b/Read/ReadShareWiki/02.生活博客/08.生活心得大集合.md
@@ -2,6 +2,9 @@
 - 01.赚钱也要赚时间
 - 02.如何看待搞副业
 - 03.发自内心想改变
+- 04.深度思考的步骤
+- 05.个人年度的复盘
+- 06.个人年度的总结
 - 09.什么是所谓弯路
 
 
@@ -67,6 +70,56 @@
     - 如果对自己的生活状况不满意，那就改变最需要改变的部分。人的精力都是有限的，明确自己最需要做什么，怎么做可以带来最大收益，找准方向才去改变，有动机有目的有热情的改变才有可能实现。
     - 确定了目标后，要学的第一课，就是先接受自己的缺点和不完美，因为你的那些睡懒觉玩手机的毛病是过去几年甚至十几年间养成的，不可能某天睁开眼，自己就成了一个完全不一样的人。
     - 人短期内并不能适应巨大的变化，与其说是改变，不如说是改善。借助工具，可以让你瞬间跳出深井，却也可能随时再掉下去；而自己慢慢搭好梯子爬上来，才是从心念上真正成熟。
+
+
+### 04.深度思考的步骤
+- 找喜欢领域
+    - 找自己一个喜欢的领域，课题，或者感兴趣的事情。或者针对学习某一个技术点，也是可以的。把它写下来……
+- 写下你的想法
+    - 这里你可以先写下自己的看法。再好的事自己不想做也无济于事，内心想有这个意愿才能开启思考之门。
+    - 因此在这之前，根据对这件事的认识，可以分层次，认为是该了解，理解，熟悉，还是掌握。如果是要求掌握，那么写下深度思考的内心的意愿。
+- 阅读记录笔记
+    - 笔记的作用在于强迫思考，回想读书时，写笔记的好处就不用多说了。归纳、简化、画出脉络。内容如何连接起来。
+    - 比如，你读一部古龙的侦探类武侠小说，读完，可以做一个归纳：这部小说用了什么诡计？属于什么类别？相似的小说有哪些？它们之间的高下优劣如何？
+- 阐述思考观点
+    - 用自己的话阐述阅读的观点。先不要考虑自己的观点是否妥当和合理，只要是自己的东西，那都是思考的产物，把它写下来。
+- 思考是否适用
+    - 思考它是对的吗？是否适用？笔记写了，也可以用自己的话进行叙说呢。那么思考下，它是对的吗？是否适合在工作或者生活中运用呢？
+    - 持续迭代思考，这个就像是更新app需求功能，需要不断完善自己的思考和总结。持续迭代，因为有时候，一时半会可能思考比较浅……
+- 深度思考方法论
+    - 形成模版。找到自己深度思考的土壤，还得拥有一套开垦土壤的工具，即有一套深度思考的方法论。并且把它写成自己的模版……尝试写一下自己总结的模板
+
+
+
+### 05.个人年度的复盘
+- 复盘方法——KPT 复盘法
+    - K （ Keep 保持）：哪些行为是可以保持的？
+    - P （ Problem 问题）：曾遇到了哪些问题？
+    - T （ Try 尝试）：可以尝试去做什么？
+- 模板复盘使用方法
+    - 可以将人生划分为个人健康、学习成长、自我实现等8大方面，年终个人复盘可以根据这8个方面进行回顾。
+    - 步骤一：每个类型下，回顾过去一年所做的事情
+    - 步骤二：根据 KPT 复盘法复盘
+- 如：运动健身、阅读、学习到的新知识、学习到的新技能、培养的好习惯等。回顾
+    - K（哪些行为是可以保持的？）
+    - P（曾遇到了哪些问题？）
+    - T（可以尝试去做什么？）
+- 指实现了个人理想、抱负或发挥个人聪明才智等的内容，如：所获奖项等，比如写技术博客，阅读量和评论量。回顾
+    - K（哪些行为是可以保持的？）
+    - P（曾遇到了哪些问题？）
+    - T（可以尝试去做什么？）
+
+
+
+### 06.个人年度的总结
+- 总体概述
+    - 背景说明。简单描述一下总结的工作背景，至少要让人知道你是做什么的，做了那些事，效果数据等等。
+- 工作总结
+    - 一句话总结。针对具体的工作，要能抽象出工作的重点。比如
+    - 具体工作内容
+    - 存在不足
+    - 进步提升
+
 
 
 ### 09.什么是所谓弯路
