--- a/Read/ReadShareWiki/05.综合专项/23.极简主义模板.md
+++ b/Read/ReadShareWiki/05.综合专项/23.极简主义模板.md
@@ -1,153 +1,49 @@
 #### 目录介绍
-- 01.极简主义的背景
-    - 1.1 生活一堆琐事
-    - 1.2 生活的失衡
-    - 1.3 不堪的压力
-- 02.你眼中的极简主义
-    - 2.1 如何理解它
-    - 2.2 它是干嘛的
-    - 2.3 不要极端化
-- 03.重新定义新生活
-    - 3.1 当下专注什么
-    - 3.2 思考使命
-    - 3.3 工作快乐吗
-- 04.找到极简五种价值
-- 05.极简生活的做法
-    - 5.1 你有何方式
-    - 5.2 去掉无用物品
-    - 5.3 别老盯着手机
-    - 5.4 健康生活
 
 
-### 01.极简注意的背景
-- 它到底有怎样的魅力，甚至很多大佬都在推荐极简生活？肯定是先遇到了问题，才会有之后的极简生活。
 
+目标沟通：请在填写目标前，确认已经与上级充分沟通目标传递，公开透明，形成共识，共同制定高质量目标。
+目标数量：以3-5条为宜，具体数量请与上级沟通确定。
+目标制定原则：“SMART”原则
+Specific-明确具体：目标明确不笼统
+Measurable-可衡量：目标达成情况可衡量
+Attainable-可行性及挑战性：注意和历史数据、竞品数据、业界水平对比
+Relevant-相关性：与本职工作相关
+Time-bound-时间性：注重目标完成的时间
+优秀目标的特征：
 
+目标名称：不要仅填写项目名称或动作，如“xx项目”、“xx产品上线”，建议目标可以凸显所做事情背后的价值，并尽量鼓舞人心，有一定挑战性。
+关键结果：能量化的关键结果尽量量化，不能量化的尽量具体化，如明确截止时间及输出结果。
 
+优秀目标举例：
 
-#### 1.1 生活一堆琐事
+目标1：Insiaht日志系统成本从xxxx元/百万条日志降至xxx
 
+衡量标准1：预处理模块字段管理功能开发上线，全量日志切入
 
+衡量标准2：海外CES下线切入自研ES
 
+衡量标准3：直播Access日志接入Clickhouse
 
-#### 1.2 生活的失衡
-- 如果你总是加班加点地工作，根本没有时间分给身边的人。那么是不是要审视一下自己的生活是否平衡呢？
-- 有时候感觉很内卷，不断地给自己充电，工作又时长加班，在大城市默默奋斗却看不到头，是不是有一种很无助的感觉。思考一下，你的生活是否失去了平衡。那么什么是生活的平衡。
-- 写下三条生活失衡的事情？它们的影响范围多大，影响时间多长。
+目标2：保障新项目(Padlet项目)高效交付，服务稳定运行
 
+衡量标准1：技术方案规范化，验证后沉淀成模板，推广到其它项目使用
 
+衡量标准2：转测、发布checklist规范化，验证后沉淀成模板
 
-#### 1.3 不堪的压力
-- 焦虑、压力、担忧、不堪重负以及抑郁等等。思考一下这些在自己身上是否有，如果有，记下来，是什么带来这些因素。
+衡量标准3：通过完善日志监控、保障专项，确保项目可控、服务稳定运行
 
+衡量标准4：前后端各自锻炼出一位熟练掌握研发全流程，能独立owner项目的业务骨干
 
+目标3：xxxx产品需求开发，保证符合产品预期与稳定
 
+衡量标准1：Owner整个xxx产品研发技术方案设计，研发质量、风险管理和技术问题解决保障系统稳定性与可靠性
 
-### 02.你眼中的极简主义
-- **极简主义不是要你一无所有，而是要你穿越物质的海洋，找到真正重要的东西**。
+衡量标准2：从0到1搭建解决方案中心，完成解决方案中心产品需求开发V1.0和V11等版本发布与使用
 
+衡量标准3：2月底完成学情报告为展示内容的智脑管理平台的全流程串通，包括与指标平台开放平台的打通
 
-#### 2.2 它是干嘛的
-
-
-
-#### 2.3 不要极端化
-
-
-
-### 03.重新定义新生活
-#### 3.1 当下专注什么
-- 思考一下你挡下的周期，专注了什么
-
-
-#### 3.2 思考使命
-
-
-#### 3.3 工作快乐吗
-- 思考一下你当下的工作，是你想要的吗？有没有感觉一段时间后，工作到了一个疲倦期，想躺平……你的工作快乐吗？如果不快乐，缘由是什么？
-- 当下工作是否是自己想要的，认真想一想，写下来自己的想法，为什么。
-- 当下工作如果不快乐，为什么？是钱不够，还是没有上升空间，具体找到原因，然后想想该怎么提升。
-
-
-
-
-### 04.找到极简五种价值
-- 极简主义不是要人一无所有，而是要人穿越物质的海洋，通过舍弃生活中多余的东西，找到真正重要的东西，集中精力追求生命中最重要的五种价值：健康、人际关系、热情、成长和奉献。
-
-
-
-
-### 05.极简生活的做法
-#### 5.1 你有何方式
-
-
-#### 5.2 去掉无用物品
-- 有哪些物品，是可以不要，但是去占据了你的空间。如果弃掉，是否对你的生活产生影响。
-- 有哪些物品，不常用，但是却需要你付出大量的金钱。如果合理利用自己的狭小空间。
-
-
-
-#### 5.3 别老盯着手机
-- 减少对手机的过度关注。在这个信息爆炸的年代，人们走路看手机，吃饭看手机，上厕所也盯着手机…
-- 思考下，能否减少盯手机的时间，晚上下班后能否放开手机。
-
-
-
-#### 5.4 健康生活
-- **健康。健康成分饮食、锻炼、睡眠、心理等因素**。我必须停止乱花钱。我必须少做点工作。我必须把那些垃圾全都扔掉。我必须吃更健康的食品。我必须锻炼。
-- 把自己准备或者开始健康生活的具体方式写下来，罗列一个目标，并坚决去执行。
-
-
-
-
-
-
-#### 11.2 人际关系
-- **人际关系。绝佳关系中的八大要素：爱、信任、诚实、关怀、支持、专注、可靠、理解**。
-- 这一个要素或许是最为错综复杂的，因为要真正理解他人是极其困难的。因此，这一节我们提供一些帮你理解他人的秘诀。
-- 争执是滋生不满的温床。然而很多争执，尤其是与我们所爱的人之间的争执，则单纯源于误解的小题大做。为了逃离误解的旋涡——让双方最终都能满意——我们必须避免冲动行事，而要设法度过理解的四阶段：容忍，接受，尊重，欣赏。
-- 当你再次走在人生岔路上时，记住T.A.R.A.：容忍（Tolerate）、接受（Accept）、尊重（Respect）和欣赏（Appreciate）。经常这样处理问题，你的人际关系就会越来越好，而你将体验到只有真正理解他人时才有的丰富经历。
-- 有件事要牢记在心：你必须想方设法、坚持不懈地为首要人际关系日日补充营养。在山上“活在当下”。不要被过去束缚，不要为未来烦恼，只要在山上就好。
-- 偶尔关闭网络。有更多时间用于阅读；有更多时间用于写；有更多时间用于思考；有更多时间跟朋友沟通；有更多时间用于锻炼；不再像以前那样渴求网络了
-
-
-
-#### 11.3 热情
-- **热情。移除枷锁**。生活中主要有四道枷锁，让我们无法寻找热情，它们分别是身份、地位、确定性和金钱。
-
-
-
-#### 11.4 成长
-- **成长。我们生命的意义：实现个人成长，为他人做出贡献**。
-- 现在该怎么办？闲着、休息，每天在湖边钓鱼？吃着奇多，笼罩在电视机发出的蓝光中？当然不是。你想继续享受刚得到的新生活——改善健康状况、人际关系，追求新发现的爱好。因此，你必须继续进步，继续成长。
-- 逐步积累的变化。如果一种改变无法坚持下去，那是因为这个人无法从这种改变中看到长期收益（也就是说，他们没有将足够的满足感与这种改变联系起来，或者是他们将太多的不满与这种改变联系了起来）。然而，一旦你将大量的满足感与某一改变联系起来，这种变化就成了你必须做的事。一旦你下定决心做出改变，一旦你有了足够的动力，最重要的就是立即行动。
-- 真正的成长的关键是持之以恒。每天付出持续、渐进的行动，就是我们改变人生的方式。这感觉就像一开始在慢慢爬行，一旦产生了足够的动力，你就不想停下成长的脚步。正是成长让你感到充满了生机和活力。
-
-
-
-
-#### 11.5 奉献
-- 成长通往奉献这真是个不可思议的循环：你越成长，就越能帮助其他人成长；而越是帮助他人成长，你自己就越能获得更多成长。
-- 人们为什么不去奉献，人们之所以没有竭尽所能地去做他们应做（或想做）的贡献，是因为他们常常将奉献视为并不喜欢的正面经历。而回避不喜欢的事物是人类的天性。如果真的决定要体验持久的满足感和成就感，你就必须改变这一点。如果想让人们尊敬你，那你就必须为他们的人生增添价值。否则你就是一个累赘、一个肿瘤、一个寄生物、尸体上的一只臭虫。
-- 增添价值的方式有很多种。1.创造人们可以使用的某样东西。2.激励某人去采取行动。3.伸出援手。4.在别人想哭时提供肩膀，给人依靠。5.为某人指出更好的方法。6.提供一个新观点。7.以身作则。8.更多地去聆听。9.给予充分的关注。10.在某人需要时支持他。11.去爱他们。
-
-
-
-
-### 12.还需要换位思考
-- 很多人对于极简主义的疑虑，都来自于家人。毕竟，你也不能突然之间就把家里的电视给扔了，那肯定会引发家庭战争。你们是一家人，你不能单方面做决定。
-- 因为不能随心所欲，你会觉得有点挫败，但其实这也是有趣的体验。你要学会如何与团体一起行动，一起思考和学习。
-- 你可以从你自己开始，为身边的人做表率，例如：**精简你的衣橱；献出你的时间去帮助他人；改变你的习惯；改变你的锻炼方式；找回你的爱好**。当你开始改变自己，其他人常常也会跟着做。因为他们看到了你改变后的样子——热情、自由和快乐，所以他们也忍不住想要加入！
-
-
-
-### 14.极简管理的概念
-- **关注价值。极简管理要以终为始，不断更新迭代，始终关注价值**。以价值高低为标尺，判断哪些事情是否值得做，哪些策略是否应该执行；要始终坚持自己的价值观，坚持以价值优先的判断依据。
-- **专注聚焦。人的时间和精力是稀缺资源**。专注是一种昂贵的易耗品，专注力就那么多，当我们无法做到专注聚焦时，所付出的代价可能是无法将自身的潜能完全发挥。
-- **更多包容。因为你聚焦价值，把精力都放在了有价值的事情上**。对于周围的人和事，你能够更清晰地看到有价值的东西，而不被那些不好的事情、不好的情绪所遮蔽住。
-- **重要概念。知道了很多道理，很多的概念，为啥还是没有改变工作和生活，这个必须要运用或则动手实践**。结合实践的案例，运用自己知道的概念去处理问题，才能提升。
-
-
+衡量标准4：3-4月份实现与其他平台能力打通，如认知计算中心，并完善方案能力运营数据统计
 
 
 
