--- a/Read/ReadBlogWiki/08.技术管理/13.十分钟分享计划.md
+++ b/Read/ReadBlogWiki/08.技术管理/13.十分钟分享计划.md
@@ -21,10 +21,10 @@
 
 
 #### 2.2 改善计划
-- 基于此我们希望大家通过简短的10min中，把一件事情的Why、What、How完整讲清楚，分享者在这个过程中提升对事情的深入理解力和表达能力，听众也能获取信息的输入并且相互讨论交流，双向受益。所以从分享中希望大家有以下收获：
-- 团队增加了交流机会
-- 对产品、技术有更多的了解
-- 提升个人的知识提炼和沟通能力
+- 基于此我们希望大家通过简短的10min中，把一件事情的Why、What、How完整讲清楚。
+- 分享者在这个过程中提升对事情的深入理解力和表达能力，听众也能获取信息的输入并且相互讨论交流，双向受益。
+- 所以从分享中希望大家有以下收获：
+- 团队增加了交流机会；对产品、技术有更多的了解；提升个人的知识提炼和沟通能力
 
 
 ### 03.十分钟分享什么
