--- a/Read/ReadBlogWiki/08.技术管理/14.写简历注意事项.md
+++ b/Read/ReadBlogWiki/08.技术管理/14.写简历注意事项.md
@@ -10,7 +10,8 @@
 
 
 ### 01.简历到面试官这
-- 好好的一份简历，它究竟是怎么到面试官的手里的呢？通常有下面几种途径：各大平台投简历：这是最快的方式，也是成功率最低的方式；猎头推荐：猎头的推荐一般比较具有目标性，HR也会比较重视；内推：这是成功率最高的方式，很可能简历会跳过HR直接到面试官手里
+- 好好的一份简历，它究竟是怎么到面试官的手里的呢？通常有下面几种途径：
+- 各大平台投简历：这是最快的方式，也是成功率最低的方式；猎头推荐：猎头的推荐一般比较具有目标性，HR也会比较重视；内推：这是成功率最高的方式，很可能简历会跳过HR直接到面试官手里。
 - 一般来说，对于初中级求职者，我比较推荐第一种方式，而资深一点的求职者，后两种方式，都是比较好的。
 
 
