--- a/Read/ReadShareWiki/02.生活博客/05.工作笔记大集合.md
+++ b/Read/ReadShareWiki/02.生活博客/05.工作笔记大集合.md
@@ -9,6 +9,9 @@
 - 08.思考非管理时间
 - 09.工作流程的模版
 - 10.四象限法则管理
+- 11.导师管理方法论
+- 12.打造工程师文化
+
 
 
 ### 01.工作稳定的探讨
@@ -210,6 +213,55 @@
 - 重要不紧急（有计划去做）
 - 紧急不重要（交给别人做）
 - 不紧急不重要（尽量不要做）
+
+
+
+### 11.导师管理方法论
+- 导师角色介绍
+    - 随着业务不断的发展，团队的规模也越来越大，为了让新入职的同学能更好更快速地融入集体发挥自身热量，需要老童鞋们特殊的关怀。
+    - 不同于公司层面的伙伴，偏重于公司制度和生活层面的内容。
+    - 导师 (Mentor) 的角色更像是游戏里的助手，让你能快速地接收任务，明白整个游戏的运转方式，然后不断的接受挑战，增长经验提升战斗力，然后独当一面。
+- 导师管理整体节奏
+    - 第一月：第一、二周完成新人串讲、试用期目标的制定；第三、四周开始修复小bug、完成小需求，尽快进入状态
+    - 第二月：能完成小/中需求
+    - 第三个月：能完成中需求
+    - 第四个月起：可以完成中/大需求开发以及模块的重构任务
+- 导师管理的流程要求
+    - Mentor需要对新人进行每日进度的沟通，确保方向正确
+    - Mentor还需要每周进行正式沟通，给予新人阶段性反馈和改善意见
+    - 新同学需要发送新人日报、并在新人日报WiKi中创建自己的新人日报内容，新人可以通过wiki去记录学习到的内容以及看到的问题，方便横向沟通（新人日报、周报持续一个月，一个月后相关内容记录到组内周报中）
+    - Mentor需要每周五发送新人周报，内容需要体现：时间（入职第xx周）、主要工作内容、对新人的阶段性评价以及后续的培养任务计划 （Mentor周报持续两个月）
+    - Mentor还需要对新人进行代码理解的指导，确保新人能够快速理解整个项目的结构并进行相关模块的新人分享
+    - Mentor需要对新人的试用期目标进行沟通和设定，保证新人有明确的工作内容和方向
+- 导师管理的细节说明
+    - 不同的新人会有不同的性格，Mentor不仅需要关注新人的集体融入情况以及相关任务的进展状况，同时也需要有老童鞋的温度，在工作和生活方面都给予帮助和指导，提升新人的幸福感和目标感。
+    - Mentor需要不定时去询问新人是否遇到困难，是否需要帮助，有些新人可能会碍于面子等因素自己花费大量时间去解决某些问题，而这些问题大部分都是已知问题，确保新人不在环境等低级问题层面耗费大量精力和时间。
+
+
+
+### 12.打造工程师文化
+- 你知道什么是工程师文化吗？
+    - 弹性的工作时间、优雅的办公环境、穿着自由且随意、做自己喜欢的工作、工程师们说了算……这些显然不是，它们只是工程师文化的表象，而非本质。
+- 来看一个案例
+    - 有些互联网创业公司对外号称弹性工作时间，但当员工做完当天工作并按时下班时，老板却认为这些员工不够努力，但又束手无策，只能在内心里埋怨。
+    - 当这样的事情屡次发生后，老板对员工会产生更加强烈的不满，离员工的距离也会越来越远，从而不再信任他们。
+- 真正的工程师文化是什么样的？
+    - 工程师文化是以共同解决实际问题为目标的团队文化。工程师文化并非由工程师们自发创建，更不是工程师们的一种自嗨行为。
+    - 工程师文化是由企业文化所决定，企业文化由老板所决定，老板必须理解工程师这样的人群，才能把合适的工程师放在合适的位置上，才能真正领悟工程师文化的真谛，才能做成一家真正的互联网产品技术型公司。
+- 可以抽象地认为，工程师文化只是一个代号，一种象征
+    - 工程师文化强调的是团队有目标、有分工、有协作，而且团队所解决的是当前面临的实际问题，并非一些不切实际的目标，更不是加班这种表面上的东西。
+- 怎样打造工程师文化
+    - 工程师文化并非一个人或几个人就能打造起来，需要公司老板以及高管们的认同，自顶向下地影响并鼓励自己的团队。
+- 如果你是一位技术负责人
+    - 你的老板却并太不懂技术，此时的你就需要掌握正确的操作方法，才能打造出良好的工程师文化，否则后面迎接你的将是一场噩梦。
+    - 作为技术负责人，打造工程师文化要做的第一件事情是，让老板理解软件开发是一项工程，需要工程师们一起合力完成，此外，还要让老板看清工程师的价值。
+    - 因为在不懂技术的老板眼中，工程师的成本是相当昂贵的，他们做的东西自己又看不懂，不知道钱花得有没有价值，工程师们每天都在做什么？
+    - 为何做一个项目不能直接开干，还要先去估时？估时会不会有水分？这些都是问题。
+- 站在老板的角度去分析
+    - 技术负责人必须站在老板的角度去理解他，把他心中的这些顾虑全部排除掉，让他觉得软件开发是一项伟大而复杂的过程。
+    - 需要工程师们用科学的方法来避免风险，从而让项目得以顺利交付。如果忽略了这个过程，那么后面做的一系列事情，可能老板既看不懂，也不认为有价值。
+- 当你让老板理解了软件工程以及工程师价值以后，接下来还要注意以下几个关键点：
+    - 让团队扁平，自己和团队一起工作；没有 Leader，只有 Owner；一切都以数据说话，分析数据的本质；可以加班，但拒绝无意义的加班。
 
 
 
