--- a/Read/ReadBlogWiki/04.执行策略/18.生命线分享游戏.md
+++ b/Read/ReadBlogWiki/04.执行策略/18.生命线分享游戏.md
@@ -10,8 +10,10 @@
 
 
 ### 01.先简单说下背景
-- 自我认知的重要性大家都知道，清晰且正确的自我认知决定了我们能不能更好的成长，以及更大概率地获得成功。但这并不是一件简单的事，说它是人生中最大的难题也不为过，多少人终其一生，对自己也没有正确的认识。
-- 有没有什么方法能让我们更好的认知自我呢？推荐一个小技巧——生命线分享。比如同事，朋友在一起交流和分享自己的技术、管理、学习或者人生经验等。而生命线分享就是用来复盘自己人生，并借此建立关系的一个好方法。
+- 自我认知的重要性大家都知道，清晰且正确的自我认知决定了我们能不能更好的成长，以及更大概率地获得成功。
+- 但这并不是一件简单的事，说它是人生中最大的难题也不为过，多少人终其一生，对自己也没有正确的认识。
+- 有没有什么方法能让我们更好的认知自我呢？推荐一个小技巧——生命线分享。比如同事，朋友在一起交流和分享自己的技术、管理、学习或者人生经验等。
+- 而生命线分享就是用来复盘自己人生，并借此建立关系的一个好方法。
 
 
 
