--- a/Read/ReadBlogWiki/08.技术管理/14.写简历注意事项.md
+++ b/Read/ReadBlogWiki/08.技术管理/14.写简历注意事项.md
@@ -80,7 +80,8 @@
 
 
 #### 7.1 不要说的空泛
-- 对于能力来说，切忌泛泛而谈，简历中的一些大而广的说辞是没有太大作用的，比如，精通Java，先不说你是不是真的精通Java，就当你说你的Java技术比较好，但是做这一行的，难度还有Java不好的吗，显然这个说法并不能传递出什么信息，属于废话，但如果你写的是「熟悉Java的类加载机制，掌握Java字节码分析能力，在公司开发了一套插件化|字节码修改工具」，这样就比较具体了。
+- 对于能力来说，切忌泛泛而谈，简历中的一些大而广的说辞是没有太大作用的，比如，精通Java，先不说你是不是真的精通Java，就当你说你的Java技术比较好，但是做这一行的，难度还有Java不好的吗。
+- 显然这个说法并不能传递出什么信息，属于废话，但如果你写的是「熟悉Java的类加载机制，掌握Java字节码分析能力，在公司开发了一套插件化|字节码修改工具」，这样就比较具体了。
 - 能力写的具体，还有一个好处，那就是很可能你的这个技术点，非常符合当前公司里面的技术栈，那么这也是能够加分的一个方面。
 - 上面就是针对简历的一些优化意见，当然，最重要的一点，打铁还需自身硬，实力才是简历最强大的支撑。
 
