--- a/Read/ReadAndroid/01.大型方案/24.网络请求库封装实践.md
+++ b/Read/ReadAndroid/01.大型方案/24.网络请求库封装实践.md
@@ -9,6 +9,9 @@
     - 2.1 网络请求流程
     - 2.2 常见网络请求
     - 2.3 域名解析过程
+    - 2.4 常见GET请求
+    - 2.5 常见POST请求
+    - 2.6
     - 2.8 
 - 03.网络库封装设计
     - 3.1 网络库设计思路
@@ -57,7 +60,7 @@
 
 #### 2.2 常见网络请求
 - 同步请求和异步请求。
-    ``` java
+    ```
     //同步
     Response response = okHttpClient.newCall(request).execute();
     //异步
