--- a/Read/ReadBlogWiki/04.执行策略/17.阶段复盘方法论.md
+++ b/Read/ReadBlogWiki/04.执行策略/17.阶段复盘方法论.md
@@ -26,7 +26,8 @@
 
 #### 1.1 发生问题需要复盘
 - 在事后总结阶段，正常情况下我们主要是做收获总结和成果汇报即可，但是如果发生了明显的问题，就需要做问题复盘。
-- **复盘是一个围棋术语，它指的是对局结束后回顾记录，检查招法的优劣和得失关键，并且根据分析提出更好的招法，提升以后的对局能力**。后来，这个思路被引入到了管理工作中。小杨觉得围棋中的复盘，其实可以应用于生活中的方方面面。
+- **复盘是一个围棋术语，它指的是对局结束后回顾记录，检查招法的优劣和得失关键，并且根据分析提出更好的招法，提升以后的对局能力**。
+- 后来，这个思路被引入到了管理工作中。小杨觉得围棋中的复盘，其实可以应用于生活中的方方面面。
 
 
 
