--- a/Read/ReadBlogWiki/08.技术管理/08.Owner工作职责.md
+++ b/Read/ReadBlogWiki/08.技术管理/08.Owner工作职责.md
@@ -1,30 +1,27 @@
 #### 目录介绍
 - 01.为什么要有owner
-- 02.什么项⽬要有owner
-- 03.怎么确定owner
-- 04.开发owner的职责
-- 05.owner失责的判定
+- 02.开发owner的职责
+- 03.owner目标的沟通
+- 04.给技术员工做考核
+- 05.组织技术周会总结
 
 
 
 ### 01.为什么要有owner
-- 因为服务之间的依赖，为了实现同⼀个产品需求，往往需要跨团队多服务联合升级，这时候，就需要有⼀个开发owner作为项⽬的研发负责⼈。
-- 所以该⽂档主要针对多服务联合升级的需求，制定owner相关机制。⾄于服务单独升级就能满⾜的需求，谁开发谁owner，谁对整个需求负责。
-
-
-### 02.什么项⽬要有owner
-- 跨2个及以上团队的项⽬，必须有开发owner，没有开发owner，项⽬不能启动
-- 什么时间确认开发owner？最晚要在需求详细评审完成时，明确开发owner。
-
-
-### 03.怎么确定owner
-- ⼤原则上（主要从上⾄下原则）
+- 为什么需要owner
+    - 因为服务之间的依赖，为了实现同⼀个产品需求，往往需要跨团队多服务联合升级，这时候，就需要有⼀个开发owner作为项⽬的研发负责⼈。
+    - 所以该⽂档主要针对多服务联合升级的需求，制定owner相关机制。⾄于服务单独升级就能满⾜的需求，谁开发谁owner，谁对整个需求负责。
+- 什么项⽬要有owner
+    - 跨2个及以上团队的项⽬，必须有开发owner，没有开发owner，项⽬不能启动
+    - 什么时间确认开发owner？最晚要在需求详细评审完成时，明确开发owner。
+- 怎么确定owner
+    - ⼤原则上（主要从上⾄下原则）
     - 项⽬中需要对接最多⽅的团队的主要开发⼈员或者负责⼈
     - 改动点最多的团队的主要开发⼈员或者负责⼈真实参与项⽬的⼈
     - ⾃愿原则
 
 
-### 04.开发owner的职责
+### 02.开发owner的职责
 - 需求评审
     - 1、叫⻬需求涉及的所有开发团队，包括对应qa，参与需求评审
     - 2、评审需求内容，关注需求合理性、与其他系统的关联性、现有能⼒能否满⾜该需求
@@ -54,12 +51,69 @@
     - 3、pre回归、线上回归过程中出现问题，严格执⾏回滚⽅案或者关闭功能开关
     - 4、线上回归发现问题情况下，制定修复⽅案、推动及时修复、问题验证和回归影响⾯评估，
     - 5、上线开流量后，观察2-3天
+- owner失责的判定
+    - ⽆失 没有明显的失职之处职
+    - ⼀般 对标《开发owner的职责》部分，有失职 <= 3 项以内职责没有做到位
+    - 严重 对标《开发owner的职责》部分，有失职 > 3项职责没有做到位
 
 
-### 05.owner失责的判定
-- ⽆失 没有明显的失职之处职
-- ⼀般 对标《开发owner的职责》部分，有失职 <= 3 项以内职责没有做到位
-- 严重 对标《开发owner的职责》部分，有失职 > 3项职责没有做到位
+### 03.owner目标的沟通
+- 目标沟通事项
+    - 目标沟通：请在填写目标前，确认已经与上级充分沟通目标传递，公开透明，形成共识，共同制定高质量目标。
+    - 目标数量：以3-5条为宜，具体数量请与上级沟通确定。
+- 目标制定原则：“SMART”原则
+    - Specific-明确具体：目标明确不笼统
+    - Measurable-可衡量：目标达成情况可衡量
+    - Attainable-可行性及挑战性：注意和历史数据、竞品数据、业界水平对比
+    - Relevant-相关性：与本职工作相关
+    - Time-bound-时间性：注重目标完成的时间
+- 优秀目标的特征：
+    - 目标名称：不要仅填写项目名称或动作，如“xx项目”、“xx产品上线”，建议目标可以凸显所做事情背后的价值，并尽量鼓舞人心，有一定挑战性。
+    - 关键结果：能量化的关键结果尽量量化，不能量化的尽量具体化，如明确截止时间及输出结果。
+- 优秀目标举例：
+    - 目标1：保障新项目(Padlet项目)高效交付，服务稳定运行
+    - 衡量标准1：技术方案规范化，验证后沉淀成模板，推广到其它项目使用
+    - 衡量标准2：转测、发布checklist规范化，验证后沉淀成模板
+    - 衡量标准3：通过完善日志监控、保障专项，确保项目可控、服务稳定运行
+    - 衡量标准4：前后端各自锻炼出一位熟练掌握研发全流程，能独立owner项目的业务骨干
+    - 目标2：xxxx产品需求开发，保证符合产品预期与稳定
+    - 衡量标准1：Owner整个xxx产品研发技术方案设计，研发质量、风险管理和技术问题解决保障系统稳定性与可靠性
+    - 衡量标准2：从0到1搭建解决方案中心，完成解决方案中心产品需求开发V1.0和V11等版本发布与使用
+    - 衡量标准3：2月底完成学情报告为展示内容的智脑管理平台的全流程串通，包括与指标平台开放平台的打通
+    - 衡量标准4：3-4月份实现与其他平台能力打通，如认知计算中心，并完善方案能力运营数据统计
 
+
+
+### 04.给技术员工做考核
+- 如何给技术部员工做考核？
+    - https://juejin.cn/post/7142505498070220814
+
+
+### 05.组织技术周会总结
+- 周会的目的
+    - 周会作为每周例行的会议，为技术方向的所有同学提供了项目同步、问题反馈、分享交流的平台，重要性不言而喻。
+    - 目前通过轮流主持的方式，让每个同学都能参与进来，随着团队规模的变大，需要一套统一的规范来保证周会流程的效率、质量和效果。
+- 整体职责
+    - 主持方式：按照工位顺序，轮流执行
+    - 工作范围：预定会议室、创建周报模板、提醒周报更新、提前确认会议内容、主持会议、分享跟进、周报内容维护、TODO记录与跟进等
+    - 下面会按照时间轴的顺序，给出团队内的周会规范的具体细节。
+- 周会前准备
+    - 预定会议室：请在每周一早上10点预定本周四下午的会议室，优先选取下午4-6点，4点的没有再订别的时段。若都没有抢到，可与其他团队同学协商调换，会议室确认后，一定要提前发出会邀
+    - 创建周报模板：请在每周四中午12点前完成本周周报模板的创建，方便下午陆续更新周报
+    - 提醒周报更新/上周TODO：请根据周会具体时间，提前2h提醒大家更新周报，并将上周TODO发到群中做提醒
+    - 提前确认会议内容/时间：常规的周会内容不用单独说明，但需要提前确认本周是否有技术分享等内容，合理安排好会议时间，合理周会时间为0.5h-1h。
+    - 提前更新分享物料，如果有分享内容，需提前将分享内容发到群里，并托管到相应渠道：
+    - 10分钟小分享：上传wiki，十分钟分享计划
+    - 常规大分享：但wiki对文件大小上传有限制
+    - 系列技术培训：请托管在该系列统一的技术文档下，或者写到同一个分享目录下面，例如统一的Kotlin培训、Flutter培训
+- 周会中记录
+    - TODO跟进：请在常规会议内容开始前，先过一遍上周周会的TODO
+    - 主持会议：常规的周会内容需要区分好优先级和顺序，例如常规的性能部分，只需关注异常指标，不用面面俱到，对于线上问题部分，需要着重说明
+    - TODO记录：请把本次周会所有的TODO项，及时更新在本周周会wiki的评论区中，便于下次跟进
+    - 下一位主持人提醒：周会结束前，需要提醒一下下一位主持人，提前预定会议室
+    - 下一位分享嘉宾提醒：周会结束前，需要确认一下下次是否有分享&分享内容
+- 周会后总结
+    - 再次确认分享物料是否已托管到上述管理渠道
+    - 检查周报完整度：最晚在周会结束后，每位同学都需要及时更新个人周报部分，对于未更新的同学做出提醒，项目进展部分一般在周会中会涉及到，不会遗漏。
 
 
