--- a/Read/ReadBlogWiki/08.技术管理/08.Owner工作职责.md
+++ b/Read/ReadBlogWiki/08.技术管理/08.Owner工作职责.md
@@ -4,6 +4,7 @@
 - 03.owner目标的沟通
 - 04.给技术员工做考核
 - 05.组织技术周会总结
+- 06.周会十分钟的分享
 
 
 
@@ -85,8 +86,22 @@
 
 
 ### 04.给技术员工做考核
-- 如何给技术部员工做考核？
-    - https://juejin.cn/post/7142505498070220814
+- 考核的目的是什么呢？我能想到的考核目的有3个：
+    - 让付出和回报尽可能公平。
+    - 打造高绩效团队，淘汰那些不合格的员工。
+    - 确保员工的个人目标与企业目标相一致，并能通过绩效考核机制激励员工完成个人目标。
+    - 这3个目的看起来都比较虚，因为无法量化，无法量化就没办法考核，所以公司想要考核员工，首先得量化考核指标。
+- 企业常用的工具就是目标管理
+    - 所谓的目标管理就是把公司的总体目标，自上而下的分解为每个员工的个人目标。
+    - 我们经常听到的KPI（关键绩效指标）和OKR（目标与关键成果）其实本质都是目标管理工具。
+    - 只是KPI更注重结果，而OKR更侧重达成目标的途径，所谓的O更像是一个方向上的指引。
+- 量化能力模型
+    - 把个人能力分两个维度：通用能力维度、专业能力维度。
+    - 通用能力分为：沟通能力、解决问题能力、执行力、工作态度四个关键能力。
+- https://juejin.cn/post/7142505498070220814
+
+
+
 
 
 ### 05.组织技术周会总结
@@ -115,5 +130,31 @@
 - 周会后总结
     - 再次确认分享物料是否已托管到上述管理渠道
     - 检查周报完整度：最晚在周会结束后，每位同学都需要及时更新个人周报部分，对于未更新的同学做出提醒，项目进展部分一般在周会中会涉及到，不会遗漏。
+
+
+### 06.周会十分钟的分享
+- 背景说明
+    - 为了周会的内容更加有意义，我们减少受众较小的业务同步，增加更多有意义的内容同步，所以我们增加了趣味十分钟分享计划。
+- 发现问题
+    - 在晋升答辩中，我们发现有几个问题。
+    - 自己所做的事情原因理解不够深刻
+    - 沟通表述中条理性有提升空间，对讲述的内容需要有提炼能力
+    - 对技术有较多的了解，但对业务的信息输入不足
+    - 团队需要更多的机会增加交流和碰撞
+- 改善计划
+    - 基于此我们希望大家通过简短的10min中，把一件事情的Why、What、How完整讲清楚。
+    - 分享者在这个过程中提升对事情的深入理解力和表达能力，听众也能获取信息的输入并且相互讨论交流，双向受益。
+    - 所以从分享中希望大家有以下收获：
+    - 团队增加了交流机会；对产品、技术有更多的了解；提升个人的知识提炼和沟通能力
+- 十分钟分享什么
+    - 内容是没有限制的，希望是多样化的，可以是某个版本的一个业务需求、最新出现的新技术简介、某一个数据指标的含义等。
+- 分享形式
+    - 周会中10min的分享，包含7分钟的讲解和3分钟的QA环节。可以使用PPT或者Wiki，但需要足够精炼，PPT不超过5页。
+- 话题池
+    - 业务概念介绍；业务流程串联演示；端迭代流程；业务指标介绍；技术框架介绍；解决问题思路等等，只要你觉得可分享内容都可以。
+
+
+
+
 
 
