--- a/Read/ReadAndroid/01.大型方案/05.心跳和轮询方案设计.md
+++ b/Read/ReadAndroid/01.大型方案/05.心跳和轮询方案设计.md
@@ -4,6 +4,7 @@
     - 1.2 什么是轮询
     - 1.3 什么是心跳
     - 1.4 需求技术分析
+    - 1.5 推送和轮询对比
 - 02.常见思路和做法
     - 2.1 实现业务轮训思路
     - 2.2 Thread.sleep实现轮询
@@ -14,7 +15,18 @@
     - 2.7 各种方式有什么区别
     - 2.8 执行轮询任务分析
 - 03.各种方式性能分析
+    - 3.1 sleep实现轮询性能分析
+    - 3.2 线程池实现轮询性能分析
+    - 3.3 Timer实现轮询性能分析
+    - 3.4 Handler实现轮询性能分析
+    - 3.5 AlarmManager实现轮询分析
 - 04.各种方式原理解读
+    - 4.1 sleep实现轮询原理解读
+    - 4.2 线程池实现轮询原理解读
+    - 4.3 Timer实现轮询原理解读
+    - 4.4 Handler实现轮询原理解读
+    - 4.5 AlarmManager实现原理解读
+
 
 
 
@@ -51,6 +63,13 @@
     - 轮训操作一般都有一定的生命周期，比如在某个页面打开时启动轮训操作，在某个页面关闭时取消轮训操作；
     - 轮训操作的请求间隔需要根据具体的需求确定，还要注意轮询；
 
+
+
+#### 1.5 推送和轮询对比
+- 轮询：基于拉取（Pull）。
+    - Android端间隔固定时间主动去请求服务端，获取相关数据，然后进行通知，相比而言，耗电，占用资源，消息可能会延迟。
+- 推送：基于推送（Push）。
+    - 服务端有数据时去通知Android端，比较及时
 
 
 
@@ -176,6 +195,53 @@
     - 答案是：直接通过一个布尔值变量控制，注意它并没有干掉线程循环，只是通过条件让其不执行任务操作。
     - 问题3：使用sleep方法延迟阻塞线程，对轮询的性能消耗是否有大的影响？有没有更好的方式？
     - 答案是：探讨中
+- 使用Timer和Service实现轮询分析
+    - 很可能出现的情况就是屏幕熄灭后一段时间，服务就被停止了，当然轮询也就被停止了。
+- 使用闹钟AlarmManager实现轮询分析
+    - 一种是利用系统服务，一种是自己通过循环。显然使用系统服务具有更高的稳定性，而且恰好解决了休眠状态下轮询中断的问题，因为AlarmManager是始终运行者的。
+
+
+
+### 03.各种方式性能分析
+#### 3.1 sleep实现轮询性能分析
+
+
+#### 3.2 线程池实现轮询性能分析
+
+
+
+#### 3.3 Timer实现轮询性能分析
+
+
+
+#### 3.4 Handler实现轮询性能分析
+
+
+
+#### 3.5 AlarmManager实现轮询分析
+
+
+
+### 04.各种方式原理解读
+#### 4.1 sleep实现轮询原理解读
+
+
+
+#### 4.2 线程池实现轮询原理解读
+
+
+
+#### 4.3 Timer实现轮询原理解读
+
+
+
+#### 4.4 Handler实现轮询原理解读
+
+
+
+#### 4.5 AlarmManager实现原理解读
+
+
 
 
 
